# spotify_api_personal_data

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Makefile  README.md  TODO.md  pyproject.toml  refresh_token.txt
docs/: conf.py  index.rst
scripts/: dev_environment_setup.py  setup.py
spotify_api_personal_data/: __init__.py  auth.py  run.py  spotify.py  spotify_api.py  version.py
spotify_api_personal_data/templates/: index.html
tests/: test_setup.py  test_spotify.py  test_spotify_api.py  test_version.py
