[tool.poetry]
name = "spotify-api-personal-data"
version = "0.1.0"
description = ""
authors = ["Alexander Grant <alexander.grant@dunelm.com>"]
readme = "README.md"
packages = [{include = "spotify_api_personal_data"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pre-commit = "^3.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
